# ai-agent-learning

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/api/: chat.py  documents.py  embeddings.py  rag.py  upload.py
app/core/: config.py  logging.py  prompts.py
app/models/: chat.py  chunk.py  document.py  embedding.py  index.py  rag.py  upload.py  vector.py
app/services/: chat_service.py  chunk_service.py  conversation_store.py  document_index_service.py  document_service.py  embedding_service.py  file_service.py  llm_service.py  rag_service.py  sqlite_conversation_store.py  vector_store_service.py
